import org.apache.tools.ant.filters.ReplaceTokens

group 'com.btk5h.skript-mirror'
version '2.5.1'

apply plugin: 'java'

repositories {
  mavenCentral()
  // Paper
  maven { url 'https://repo.papermc.io/repository/maven-public/' }
  maven {
    url 'https://oss.sonatype.org/content/groups/public/'
  }
  maven {
    url 'https://repo.destroystokyo.com/repository/maven-public/'
  }
  // JitPack
  maven { url 'https://jitpack.io' }
}

processResources {
  filter ReplaceTokens, tokens: [
    "version": version
  ]
}

compileJava   {
  sourceCompatibility = 21
  targetCompatibility = 21
  options.encoding = 'UTF-8'
}

dependencies {
  // Paper
  compileOnly("io.papermc.paper:paper-api:1.21.3-R0.1-SNAPSHOT")
  // Skript
  compileOnly('com.github.SkriptDev:Skript:3.0.0-Beta1')
}
